<resources>
    <string name="app_name">Persona</string>
    <string name="title_activity_home">MainActivity</string>

    <!--  Navigation Menu  -->
    <string name="nav_title_home">Home</string>
    <string name="nav_title_daily">Daily</string>
    <string name="nav_title_gallery">Gallery</string>
    <string name="nav_title_music">Music</string>
    <string name="nav_title_profile">Profile</string>

    <!--  Walkthrough  -->
    <string name="walk_title_1">Hi!!</string>
    <string name="walk_desc_1">Saya Wildan</string>

    <string name="walk_title_2">Coding</string>
    <string name="walk_desc_2">Asik, tapi pusing</string>

    <string name="walk_title_3">Unity</string>
    <string name="walk_desc_3">Iyap, saya fanboy Unity</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>