<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_daily"
        android:icon="@drawable/ic_daily"
        android:title="@string/nav_title_daily" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/nav_title_gallery" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_title_home" />
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music"
        android:title="@string/nav_title_music" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_title_profile" />

</menu>