<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.wildhevire.persona.ui.HomeFragment"
        android:label="@string/nav_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_daily"
        android:name="com.wildhevire.persona.DailyFragment"
        android:label="@string/nav_title_daily"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_gallery"
        android:name="com.wildhevire.persona.ui.GalleryFragment"
        android:label="@string/nav_title_gallery"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_music"
        android:name="com.wildhevire.persona.ui.MusicFragment"
        android:label="@string/nav_title_music"
        tools:layout="@layout/fragment_daily" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.wildhevire.persona.ui.ProfileFragment"
        android:label="@string/nav_title_profile"
        tools:layout="@layout/fragment_daily" />
</navigation>